--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -1,12 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>User Login</title>
-</head>
-<body>
-  Welcome to the index page
-</body>
-</html>
+<% include partials/header %>
+
+
+<% include partials/footer %>
+
+
