--- a/app/views/partials/footer.ejs
+++ b/app/views/partials/footer.ejs
@@ -12,8 +12,8 @@
 
 </div>
 
-<script src="./javascripts/jquery-3.2.0.min.js"></script>
-<script src="./javascripts/bootstrap.js"></script>
+<script src="../javascripts/jquery-3.2.0.min.js"></script>
+<script src="../javascripts/bootstrap.js"></script>
 
 </body>
 
