Getting form data and validating form data

--- a/app/views/register.ejs
+++ b/app/views/register.ejs
@@ -42,10 +42,10 @@
         </div>
         <!-- Confirm Password-->
         <div class="control-group">
-          <label class="control-label" for="password">Password</label>
+          <label class="control-label" for="password2">Confirm Password</label>
           <div class="controls">
-            <input type="password" id="password" name="password" placeholder="" class="input-xlarge" minlength="4" required>
-            <p class="help-block">Password should be at least 4 characters</p>
+            <input type="password" id="password2" name="password2" placeholder="" class="input-xlarge">
+            <p class="help-block">Re-enter password</p>
           </div>
         </div>
         <!--Profile Image-->
