--- a/app/views/register.handlebars
+++ b/app/views/register.handlebars
@@ -14,7 +14,7 @@
         <!-- Name-->
         <label for="yourname" class="control-label">Name</label>
         <div class="controls">
-          <input id="yourname" type="text" name="name" value="{{name}}" placeholder="" class="input-xlarge"/>
+          <input id="yourname" type="text" name="name" placeholder="" class="input-xlarge"/>
           <p class="help-block">Please enter your name</p>
         </div>
       </div>
@@ -22,7 +22,7 @@
         <!-- Username-->
         <label for="username" class="control-label">Username</label>
         <div class="controls">
-          <input id="username" type="text" name="username" value="username" class="input-xlarge"/>
+          <input id="username" type="text" name="username" class="input-xlarge"/>
           <p class="help-block">Please enter your desired username</p>
         </div>
       </div>
