--- a/app/views/layouts/main.handlebars
+++ b/app/views/layouts/main.handlebars
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
+<html lang="en">
 
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="">
-  <meta name="author" content="">
   <title>User Login</title>
   <!-- Bootstrap Core CSS-->
   <link href="../stylesheets/bootstrap.css" rel="stylesheet">
@@ -18,31 +17,35 @@
   script(src='https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js')
   -->
 </head>
-<!-- Navigation-->
-<nav role="navigation" class="navbar navbar-inverse navbar-fixed-top">
-  <div class="container">
-    <div class="navbar-header">
-      <button type="button" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" class="navbar-toggle"><span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button>
-      <a
-        href="#" class="navbar-brand">User Login</a>
-    </div>
-    <div id="bs-example-navbar-collapse-1" class="collapse navbar-collapse">
-      <ul class="nav navbar-nav">
-        <li><a href="/">Members</a></li>
-        <li><a href="/users/register">Register</a></li>
-        <li><a href="/users/login">Login</a></li>
-      </ul>
-      <ul class="nav navbar-nav navbar-right">
-        <li><a href="/users/logout">Logout</a></li>
-      </ul>
-    </div>
-    <!-- /.navbar-collapse-->
-  </div>
-  <!-- /.container-->
-</nav>
-<div class="container">
 
-  {{{body}}}  <!--WHERE CONTENT FROM OTHER handlebars templates appears-->
+<body>
+  <!-- Navigation-->
+  <nav role="navigation" class="navbar navbar-inverse navbar-fixed-top">
+    <div class="container">
+      <div class="navbar-header">
+        <button type="button" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" class="navbar-toggle"><span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button>
+        <a href="#" class="navbar-brand">User Login</a>
+      </div>
+      <div id="bs-example-navbar-collapse-1" class="collapse navbar-collapse">
+        <ul class="nav navbar-nav">
+          <li><a href="/">Members</a></li>
+          <li><a href="/users/register">Register</a></li>
+          <li><a href="/users/login">Login</a></li>
+        </ul>
+        <ul class="nav navbar-nav navbar-right">
+          <li><a href="/users/logout">Logout</a></li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+
+
+  <div id="content">
+    <div class="container">
+      {{{body}}}
+      <!--Where the content from other handlebars templates appears-->
+    </div>
+  </div>
 
   <hr>
   <footer>
@@ -54,4 +57,6 @@
   </footer>
   <script src="../javascripts/jquery-3.2.0.min.js"></script>
   <script src="../javascripts/bootstrap.js"></script>
-</div>
+</body>
+
+</html>
